--- a/client/src/pages/Home.module.css
+++ b/client/src/pages/Home.module.css
@@ -404,7 +404,6 @@
 
   .main {
     padding: 2rem 1rem;
-    overflow-x: hidden;
   }
 }
 
